bump dependencies and remove unused commons.text dependency